# mint

./: README.md  harbor.md  plan.md  rollout-plus-to-harbor-plan.md
.cursor/rules/: codex-source-of-truth.mdc
codex-loop/: .gitignore  README.md  SUBMISSION.md  demo.py  demo_video.py  pyproject.toml
codex-loop/codex_loop/: __init__.py  cli.py
codex-loop/codex_loop/db/: __init__.py  schema.py  vector_store.py
codex-loop/codex_loop/discovery/: __init__.py  hybrid_loop.py  schema_evolution.py  thresholds.py
codex-loop/codex_loop/distill/: __init__.py  harbor_generator.py  segment_selector.py
codex-loop/codex_loop/embeddings/: __init__.py  clustering.py  encoder.py
codex-loop/codex_loop/ingest/: __init__.py  canonicalizer.py  spine_reader.py
codex-loop/codex_loop/measure/: __init__.py  harbor_runner.py  regression.py  trend_tracker.py
codex-loop/codex_loop/pipeline/: __init__.py  daily_batch.py  work_artifacts.py
codex-loop/codex_loop/signals/: __init__.py  mechanical.py  semantic.py  types.py
codex-loop/demo/: run_demo.sh  run_full_demo.sh
codex-loop/docs/: END_TO_END_GUIDE.md
codex-loop/scripts/: generate_demo_data.py  show_demo_stats.py
codex-loop/tests/: __init__.py  test_e2e_pipeline.py  test_integration.py
codex-loop/tests/fixtures/: delight_fast_completion.jsonl  delight_zero_denial.jsonl  friction_compaction_churn.jsonl  friction_exec_failure.jsonl  friction_repeated_denial.jsonl
codex-loop/vectors/: chroma.sqlite3
